# emp_catalog

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
employees_catalog_pj/employees_catalog_app/: forms.py  models.py  urls.py  views.py
employees_catalog_pj/employees_catalog_app/management/commands/: db_population.py
employees_catalog_pj/employees_catalog_app/templates/registration/: login_admin.html
employees_catalog_pj/employees_catalog_pj/: settings.py  urls.py
