[tool.poetry]
name = "employees-catalog"
version = "0.1.0"
description = ""
authors = ["Ivan Timofeev <timofeevis89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
pillow = "^10.3.0"
faker = "^24.11.0"
python-dotenv = "^1.0.1"
dos2unix = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
